# auth-service

./: .dockerignore  .env.example  .gitignore  .postgres_auth.env.example  Dockerfile  Dockerfile.dockerignore  admin_init.py  docker-compose.yaml  entrypoint.sh  pyproject.toml  pyrightconfig.json  ruff.toml
alembic/: env.py
alembic/versions/: b58a27ebdbb9_initial.py  df58f06270f0_initial.py
nginx/: nginx.conf
nginx/configs/: auth.conf
src/: custom_auth_jwt.py  jwt_auth_helpers.py  main.py
src/api/: access_control.py  auth.py
src/api/models/: __init__.py  access_control.py  auth.py
src/core/: config.py  context_vars.py  logger.py
src/db/: postgres_db.py  redis_db.py
src/middleware/: middleware.py
src/models/: __init__.py  alchemy_model.py  cookie.py  errors.py  jwt.py
src/services/: custom_error.py  jwt_service.py  password_service.py  permission_management_service.py  redis_service.py  rights_management_service.py  user_service.py
typings/async_fastapi_jwt_auth/: auth_config.pyi  auth_jwt.pyi
typings/redis/: typing.pyi
typings/redis/asyncio/: client.pyi
