[project]
name = "auth-service"
version = "0.1.0"
description = "Service auth"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "aiohttp~=3.11.12",
    "alembic~=1.14.0",
    "async-fastapi-jwt-auth~=0.6.6",
    "backoff~=2.2.1",
    "fastapi[standard]~=0.115.6",
    "orjson~=3.10.15",
    "psycopg[c]~=3.2.3",
    "pydantic-settings~=2.7.1",
    "redis~=5.2.1",
    "requests~=2.32.3",
    "sqlalchemy[asyncio]~=2.0.37",
    "typer~=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.6",
    "pyright>=1.1.391"
]
